--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <%= render 'layouts/rails_default' %>
     <%= javascript_importmap_tags %>
+    <%= favicon_link_tag asset_path('favicon.png') %>
   </head>
 
   <body>
